--- a/grams/templates/editbranch.html
+++ b/grams/templates/editbranch.html
@@ -2,30 +2,24 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'editpage.css' %}">
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Edit Per Branch</h2>
+        <h1>Edit Branch</h1>
     </div>
 
     <div class="row">
-        <div class="col">
-
-            <h5>ID: </h5>   
-
-            <form class="form-inline">
-                <h5>Name: </h5>
-                <input type="category" class="form-control" required>
-            </form>
-             
-            <form class="form-inline">
-                <h5>Location: </h5>
-                <input type="category" class="form-control" required>
+        <div class="col-sm tablebox-container">
+            <form method="POST" action="">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Save">
             </form>
         </div>
     </div>
+
 </section>
 {% endblock content %}
