--- a/grams/templates/revalue.html
+++ b/grams/templates/revalue.html
@@ -8,7 +8,7 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h1>Edit Asset</h1>
+        <h1>Revalue</h1>
     </div>
 
     <div class="row">
