--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -262,9 +262,10 @@ h2 {
         .titlepage h1 {
             font-size: 1.7em;
             font-weight: 700;
+            padding-left: 10px;
         } 
 
-.container-fluid .col-sm {
+.container-fluid .col-sm, .col-sm-8, .col-sm-3, .col-sm-4, .col-sm-9, .col-sm-7 {
     border: 1px solid #E0E0E0;
     border-radius: 5px;
     padding: 20px;
@@ -313,7 +314,7 @@ h2 {
     text-align: center;
 }
 
-    .footer button {
+    .footer a {
         border: 0; outline: 0;
         border-radius: 3px;
         color: white;
@@ -321,16 +322,15 @@ h2 {
         -moz-box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
         box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
         margin-left: 5px;
-        width: 140px;
+        /*width: 140px;*/
     }
 
-        .footer button:hover {
+        .footer a:hover {
             border: 0; outline: 0;
             background-color: rgb(216, 212, 212);
-            color: black;
         }
 
-        .footer button:focus {
+        .footer a:focus {
             border: 0; outline: 0;
         }
 
