--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -2,22 +2,71 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'editpage.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>{{ branch_view.name }}</h2>
+        <h1>{{ branch_view.name }}</h1>
     </div>
 
-    
-        <div class="row">
-              <div class="col">
-                    <h5>ID: {{ branch_view.id }}</h5>
-                    <h5>Name: {{ branch_view.name }}</h5>
-                    <h5>Location Number: {{ branch_view.location }}</h5>
-              </div>
+        <div class="row container-fluid">
+            <div class="col-sm">
+                <h2>
+                    <i class="fas fa-info-circle"></i>&nbsp; Information
+                </h2>
+                <table class="info-table">
+                    <tr>
+                        <td><b>Name</b></td>
+                        <td>{{ branch_view.name }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Code</b></td>
+                        <td>{{ branch_view.code }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Company</b></td>
+                        <td>{{ branch_view.company }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Location</b></td>
+                        <td>{{ branch_view.location }}</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="col-sm">
+                <h2>
+                    <i class="fas fa-chart-line"></i>&nbsp; Assets
+                </h2>
+
+                <table class="table table-striped">
+                    <thead>
+                        <td>ID</td>
+                        <td>Name</td>
+                        <td>Category</td>
+                        <td>Brand</td>
+                    </thead>
+                    {% for asset in assets %}
+                        <tr>
+                            <td>{{ asset.id }}</td>
+                            <td>{{ asset.name }}</td>
+                            <td>{{ asset.category }}</td>
+                            <td>{{ asset.brand }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+                
+            </div>
         </div>
+
 </section>
+
+<div class="footer">
+    <a href="{% url 'branch-edit' branch_view.id %}" class="btn float-right neutral">Edit</a>
+    <a href="#" class="btn float-right critical">Archive</a>
+</div>
+
+
 {% endblock content %}
