--- a/grams/templates/editassetbrand.html
+++ b/grams/templates/editassetbrand.html
@@ -2,24 +2,25 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'editpage.css' %}">
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Edit Per Asset Brand</h2>
+        <h1>Edit Asset Brand</h1>
     </div>
 
     <div class="row">
-        <div class="col">
-              <h5>ID: </h5>
-
-              <form class="form-inline">
-                      <h5>Name: </h5>
-                      <input type="category" class="form-control" required>
-              </form>
-             
+        <div class="form-control tablebox-container">
+            <form method="POST" action="">
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="Save">
+                        <input type="reset" value="Reset">
+                    </form>
+            </form>
         </div>
     </div>
 </section>
