--- a/grams/templates/editassetcategory.html
+++ b/grams/templates/editassetcategory.html
@@ -2,25 +2,26 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'editpage.css' %}">
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Edit Per Asset Category</h2>
+        <h1>Edit Category</h1>
     </div>
 
     <div class="row">
-        <div class="col">
-              <h5>ID: </h5>
+        <div class="form-control tablebox-container">
+            <form method="POST" action="">
 
-              <form class="form-inline">
-                      <h5>Name: </h5>
-                      <input type="category" class="form-control" required>
-              </form>
-             
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Save">
+                <input type="reset" value="Reset">
+            </form>
         </div>
     </div>
+    
 </section>
 {% endblock content %}
