--- a/grams/templates/transfer.html
+++ b/grams/templates/transfer.html
@@ -7,10 +7,9 @@
 {% endblock page_css %}
 
 {% block content %}
-
     <section id="main" class="content">
         <div class="titlepage">
-            <h1>Schedule Maintenance</h1>
+            <h1>Transfer Asset</h1>
         </div>
 
         <div class="row">
@@ -25,6 +24,4 @@
             </div>
         </div>
     </section>
-
-
 {% endblock content %}
