--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -16,6 +16,11 @@
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
+                {% if asset_view.status == 'Archived' %}
+                    <div class="critical" style="color:#fff;padding:8px;margin-bottom:15px;margin-top:15px;border-radius:8px;">
+                        <center>This item is archived.</center>
+                    </div>
+                {% endif %}
                     <!--
                     <b>ID: </b>{{ asset_view.id }}<br/>
                     <b>Date Added: </b>{{ asset_view.date_added }}<br/>
@@ -156,7 +161,13 @@
 <div class="footer">
     <a href="{% url 'asset-edit' asset_view.id %}" class="btn float-right neutral">Edit</a>
     <a href="{% url 'asset-revalue' asset_view.id %}" class="btn float-right low">Revalue</a>
-    <a href="#" class="btn float-right critical">Archive</a>
+    {% if asset_view.display == '1' %}
+        <a href="{% url 'asset-archive' asset_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to archive this asset?')">Archive</a>
+    {% endif %}
+    {% if asset_view.display == '0' %}
+        <a href="{% url 'asset-recover' asset_view.id %}" class="btn float-right misc" onclick="return confirm('Are you sure you want to recover this asset?')">Recover</a>
+    {% endif %}
+
 </div>
 
 
