--- a/grams/templates/branches.html
+++ b/grams/templates/branches.html
@@ -11,7 +11,7 @@
     <div class="titlepage">
         <form class="form-inline">
             <h1>Branches</h1> 
-            <button type="button" class="btn" onclick="window.location.href='addbranch.html'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
+            <button type="button" class="btn" onclick="window.location.href='{% url 'branch-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
     </div>
 
