--- a/grams/templates/dashboard.html
+++ b/grams/templates/dashboard.html
@@ -15,7 +15,7 @@
             <div class="row">
 
                 <div class="col-sm reportbox neutral">
-                    <a href="assettable.html"><i class="fas fa-info-circle boxcon"></i></a>
+                    <a href="{% url 'asset-table' %}"><i class="fas fa-info-circle boxcon"></i></a>
                     <h2>???</h2>
                     <span class="reportbox-caption">total recorded assets.</span>
                 </div>
