--- a/grams/templates/vendors.html
+++ b/grams/templates/vendors.html
@@ -11,7 +11,7 @@
     <div class="titlepage">
         <form class="form-inline">
             <h1>Vendors</h1> 
-            <button type="button" class="btn" onclick="window.location.href='addvendor.html'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
+            <button type="button" class="btn" onclick="window.location.href='{% url 'vendors-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
     </div>
 
