--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -153,7 +153,7 @@
                             <a href="{% url 'branch-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
                             <a href="{% url 'branch-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                         </div>
-                        <a href="#"  class="dropdown-btn"><i class="fas fa-utensils incon"></i> Companies <i class="fas fa-angle-down"></i></a>
+                        <a href="#manage" class="dropdown-btn"><i class="fas fa-building"></i> Companies <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
                             <a href="{% url 'company-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
                             <a href="{% url 'company-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
