--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -263,6 +263,7 @@ h2 {
             font-size: 1.7em;
             font-weight: 700;
             padding-left: 10px;
+            padding-bottom: 10px;
         } 
 
 .container-fluid .col-sm, .col-sm-8, .col-sm-3, .col-sm-4, .col-sm-9, .col-sm-7 {
