--- a/grams/static/tables.css
+++ b/grams/static/tables.css
@@ -71,6 +71,16 @@ input[type="date"] {
     margin-top: 3px;
 }*/
 
+a.btn {
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-left: 9px;
+    font-size: 1em;
+    color: #fff;
+}
+
 button.btn {
     margin: 0;
     margin-right: 15px;
