--- a/grams/static/tables.css
+++ b/grams/static/tables.css
@@ -31,7 +31,7 @@ tr {
 }
 
 thead {
-    background-color: #A5D6A7;
+    background-color: rgb(90,168,90);
     text-align: center;
 }
 
@@ -53,12 +53,12 @@ input[type="date"] {
 
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
-    background: #E8F5E9
+    background: rgba(215, 236, 215, 0.7)
 }
 
 .table-striped>tbody>tr:nth-child(even)>td,
 .table-striped>tbody>tr:nth-child(even)>th {
-    background: #C8E6C9;
+    background: rgba(90, 168, 90, 0.7)
 }
 
 /*.btn {
@@ -112,3 +112,6 @@ h5 {
     padding-top: 40px;
     padding-bottom: 20px;
 }
+#myTable tbody tr:hover { 
+    background: rgb(77, 74, 74) !important;
+    cursor: pointer !important; }
