--- a/grams/templates/assetcategoryview.html
+++ b/grams/templates/assetcategoryview.html
@@ -36,13 +36,13 @@
                 <h2>
                     <i class="fas fa-chart-line"></i>&nbsp; Assets
                 </h2>
-
-                <table class="table table-striped">
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search assets..">
+                <table id = "myTable" class="table table-striped">
                     <thead>
-                        <td>ID</td>
-                        <td>Name</td>
-                        <td>Category</td>
-                        <td>Brand</td>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Brand</th>
                     </thead>
                     {% for asset in assets %}
                         <tr>
@@ -53,7 +53,40 @@
                         </tr>
                     {% endfor %}
                 </table>
-                
+{% block js %}
+            <script>
+                function myFunction() {
+                var input, filter, table, tr, td, i;
+                input = document.getElementById("myInput");
+                filter = input.value.toUpperCase();
+                table = document.getElementById("myTable");
+                tr = table.getElementsByTagName("tr");
+                    for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[0];
+                    if (td) {
+                        if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        } else {
+                        tr[i].style.display = "none";
+                        }
+                    }       
+                }
+                for (i = 1; i < tr.length; i++) {
+                        tr[i].style.display = "none";
+                        td = tr[i].getElementsByTagName("td");
+                for (var j = 0; j < td.length; j++) {
+                cell = tr[i].getElementsByTagName("td")[j];
+                    if (cell) {
+                        if (cell.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        break;
+                        } 
+                    }
+                }
+            }
+            }
+            </script>
+{% endblock js %}
             </div>
         </div>
 
