--- a/grams/templates/vendors.html
+++ b/grams/templates/vendors.html
@@ -61,6 +61,16 @@
                     $('#myTable').DataTable();
                 } );
             </script>
+            <script type="text/javascript">
+                $(document).ready(function() {
+                    $('#myTable tr').click(function() {
+                        var href = $(this).find("a").attr("href");
+                            if(href) {
+                                window.location = href;
+                            }
+                        });
+                    });  
+            </script>
         {% endblock js %}
       </div>
 </section>
