--- a/grams/templates/companiesarchive.html
+++ b/grams/templates/companiesarchive.html
@@ -9,10 +9,8 @@
 <section id="main" class="content">
         
     <div class="titlepage">
-        <h1>Companies</h1>
+            <h1>Archived Companies</h1> 
     </div>
-
-    <a href="{% url 'company-add' %}" class="btn neutral">Add</a> <a href="{% url 'archive-company-table' %}" class="btn critical">Display Archive</a>
 
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
