--- a/grams/templates/vendorsarchive.html
+++ b/grams/templates/vendorsarchive.html
@@ -9,9 +9,8 @@
 <section id="main" class="content">
         
     <div class="titlepage">
-        <h1>Vendors</h1> 
+        <h1>Archived Vendors</h1> 
     </div>
-    <a href="{% url 'vendors-add' %}" class="btn neutral">Add</a> <a href="{% url 'archive-vendors-table' %}" class="btn critical">Display Archive</a>
 
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
