--- a/grams/templates/assetbrandview.html
+++ b/grams/templates/assetbrandview.html
@@ -17,6 +17,11 @@
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
+                {% if brands_view.display == '0' %}
+                    <div class="critical" style="color:#fff;padding:8px;margin-bottom:15px;margin-top:15px;border-radius:8px;">
+                        <center>This asset brand is archived.</center>
+                    </div>
+                {% endif %}
                 <table class="info-table">
                     <tr>
                         <td><b>Name</b></td>
@@ -24,11 +29,11 @@
                     </tr>
                     <tr>
                         <td><b>Date Added</b></td>
-                        <td>{{ brands_view.code }}</td>
+                        <td>{{ brands_view.date_added }}</td>
                     </tr>
                     <tr>
                         <td><b>Description</b></td>
-                        <td>{{ brands_view.company }}</td>
+                        <td>{{ brands_view.description }}</td>
                     </tr>
                 </table>
             </div>
@@ -95,7 +100,7 @@
 
 <div class="footer">
     <a href="{% url 'asset-brands-edit' brands_view.id %}" class="btn float-right neutral">Edit</a>
-    <a href="#" class="btn float-right critical">Archive</a>
+    <a href="{% url 'asset-categories-delete' brands_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this asset brand from the database?')">Delete</a>
 </div>
 
 
