--- a/grams/templates/assetcategoryview.html
+++ b/grams/templates/assetcategoryview.html
@@ -16,6 +16,11 @@
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
+                {% if categories_view.display == '0' %}
+                    <div class="critical" style="color:#fff;padding:8px;margin-bottom:15px;margin-top:15px;border-radius:8px;">
+                        <center>This asset category is archived.</center>
+                    </div>
+                {% endif %}
                 <table class="info-table">
                     <tr>
                         <td><b>Name</b></td>
@@ -94,6 +99,6 @@
 
 <div class="footer">
     <a href="{% url 'asset-categories-edit' categories_view.id %}" class="btn float-right neutral">Edit</a>
-    <a href="#" class="btn float-right critical">Archive</a>
+    <a href="{% url 'asset-categories-delete' categories_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this asset category from the database?')">Delete</a>
 </div>
 {% endblock content %}
