--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -36,7 +36,7 @@
                     </span>
                 </a>
                 <span class="topbar-title">
-                    <a href="/home/">
+                    <a href="{% url 'dashboard' %}">
                         GRAMS
                     </a>
     
@@ -154,11 +154,13 @@
                         <div class="dropdown-container">
                             <a href="{% url 'branch-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
                             <a href="{% url 'branch-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="{% url 'branch-table-archive' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-building incon"></i> Companies <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
                             <a href="{% url 'company-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
                             <a href="{% url 'company-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="{% url 'archive-company-table' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-wrench incon"></i> Vendors <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
