--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -16,6 +16,11 @@
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
+                {% if branch_view.display == '0' %}
+                    <div class="critical" style="color:#fff;padding:8px;margin-bottom:15px;margin-top:15px;border-radius:8px;">
+                        <center>This branch is archived.</center>
+                    </div>
+                {% endif %}
                 <table class="info-table">
                     <tr>
                         <td><b>Name</b></td>
@@ -101,8 +106,14 @@
 </section>
 
 <div class="footer">
-    <a href="{% url 'branch-edit' branch_view.id %}" class="btn float-right neutral">Edit</a>
-    <a href="#" class="btn float-right critical">Archive</a>
+    {% if branch_view.display == '1' %}
+        <a href="{% url 'branch-edit' branch_view.id %}" class="btn float-right neutral">Edit</a>
+        <a href="{% url 'branch-archive' branch_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to archive this branch?')">Archive</a>
+    {% endif %}
+    {% if branch_view.display == '0' %}
+        <a href="{% url 'branch-recover' branch_view.id %}" class="btn float-right misc" onclick="return confirm('Are you sure you want to recover this branch?')">Recover</a>
+        <a href="{% url 'delete-branch' branch_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this branch from the database?')">Delete</a>
+    {% endif %}
 </div>
 
 
