--- a/grams/templates/vendorview.html
+++ b/grams/templates/vendorview.html
@@ -16,6 +16,11 @@
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
+                {% if vendor_view.display == '0' %}
+                    <div class="critical" style="color:#fff;padding:8px;margin-bottom:15px;margin-top:15px;border-radius:8px;">
+                        <center>This vendor is archived.</center>
+                    </div>
+                {% endif %}
                 <table class="info-table">
                     <tr>
                         <td><b>ID</b></td>
@@ -48,8 +53,15 @@
 </section>
 
 <div class="footer">
-    <a href="{% url 'vendors-edit' vendor_view.id %}" class="btn float-right neutral">Edit</a>
-    <a href="#" class="btn float-right critical">Archive</a>
+     class="footer">
+    {% if vendor_view.display == '1' %}
+        <a href="{% url 'vendors-edit' vendor_view.id %}" class="btn float-right neutral">Edit</a>
+        <a href="{% url 'archive-vendors' vendor_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to archive this vendor?')">Archive</a>
+    {% endif %}
+    {% if vendor_view.display == '0' %}
+        <a href="{% url 'recover-vendors' vendor_view.id %}" class="btn float-right misc" onclick="return confirm('Are you sure you want to recover this vendor?')">Recover</a>
+        <a href="{% url 'delete-vendors' vendor_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this vendor from the database?')">Delete</a>
+    {% endif %}
 </div>
 
 
