--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -166,6 +166,7 @@
                         <div class="dropdown-container">
                             <a href="{% url 'vendors-table'%}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
                             <a href="{% url 'vendors-add'%}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="{% url 'archive-vendors-table' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                     </div>
                 <!-- end manage menu -->
