--- a/grams/static/dashboard.css
+++ b/grams/static/dashboard.css
@@ -106,6 +106,7 @@ a.btn-revalue {
 .info-table tr {
     height: 15px;
     padding: 3px;
+    width: 50%;
 }
 
 .info-table td {
@@ -126,3 +127,4 @@ a.btn-revalue {
 .tablebox .col-sm{padding:0;margin:0;}
 .tablebox .col-1-sm{padding:0;margin:0;}
 .tablebox .col{padding:0;margin:0;}
+
