--- a/grams/static/dashboard.css
+++ b/grams/static/dashboard.css
@@ -128,3 +128,9 @@ a.btn-revalue {
 .tablebox .col-1-sm{padding:0;margin:0;}
 .tablebox .col{padding:0;margin:0;}
 
+
+.searchbar {
+    float: right;
+    margin-bottom: 10px;
+}
+
