--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -76,7 +76,7 @@
                     <i class="fas fa-money-bill-wave"></i>&nbsp; Depreciation
                 </h2>
 
-                <table class="table table-striped">
+                <table class="table table-striped" id="myTable">
                     <thead>
                         <tr>
                             <th>Date</th>
@@ -137,6 +137,8 @@
                     </div>
                 </div>
 
+           
+
             </div>
         </div>
 
@@ -153,7 +155,6 @@
         <a href="{% url 'delete-asset' asset_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this asset from the database?')">Delete</a>
     {% endif %}
 
-</div>
-
-
+</div
+    
 {% endblock content %}
